# xoscar

./: .clang-format  .cmake-format.yaml  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  CMakeLists.txt  CPPLINT.cfg  README.md
.github/: mergify.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-wheel.yaml  python.yaml  release-wheel.yaml
CI/: conda-environment.yml  requirements-wheel.txt  test_functionality.py
cpp/: CMakeLists.txt
cpp/collective/gloo/: CMakeLists.txt  main.cc
cpp/collective/gloo/include/: collective.h  config.h  rendezvous.h  transport.h
cpp/collective/gloo/src/: all_to_all.cc  allgather.cc  allreduce.cc  barrier.cc  broadcast.cc  gather.cc  recv.cc  reduce.cc  reduce_scatter.cc  rendezvous.cc  scatter.cc  send.cc  transport.cc
cpp/collective/rendezvous/: CMakeLists.txt  LICENSE
cpp/collective/rendezvous/include/: Backtrace.h  CallOnce.h  WinSockUtils.hpp  call_once.h  error.h  exception.h  socket.h  store.hpp  tcp_store.hpp  unix_sock_utils.hpp  utils.hpp  win32-headers.h
cpp/collective/rendezvous/src/: Backtrace.cpp  bind_tcp_store.cpp  exception.cpp  socket.cpp  store.cpp  tcp_store.cpp
doc/source/: conf.py  index.rst
doc/source/getting_started/: index.rst  installation.rst  llm-inference.rst  quickstart.rst
doc/source/reference/: actor-pool.rst  actor.rst  collective-communication.rst  index.rst
doc/source/user_guide/: actor-pool.rst  actor.rst  collective-communication.rst  index.rst
python/: .gitattributes  MANIFEST.in  pyproject.toml  setup.cfg  setup.py
python/xoscar/: __init__.py  _utils.pxd  _utils.pyx  _version.py  api.py  backend.py  batch.py  conftest.py  constants.py  context.pyx  core.pxd  core.pyx  debug.py  entrypoints.py  errors.py  nvutils.py  profiling.py  utils.pxd  utils.py  utils.pyx  worker.py
python/xoscar/aio/: __init__.py  base.py  file.py  isolation.py  lru.py  parallelism.py
python/xoscar/aio/tests/: test_aio_file.py
python/xoscar/backends/: allocate_strategy.py  config.py  context.py  core.py  message.pyi  message.pyx  pool.py  router.py  utils.py
python/xoscar/backends/communication/: __init__.py  base.py  core.py  dummy.py  errors.py  socket.py  ucx.py  utils.py
python/xoscar/backends/communication/tests/: test_comm.py
python/xoscar/backends/indigen/: __init__.py  __main__.py  backend.py  driver.py  fate_sharing.py  pool.py  shared_memory.py
python/xoscar/backends/indigen/tests/: test-logging.conf  test_debug.py  test_indigen_actor_context.py  test_pool.py  test_proxy.py  test_virtual_env.py
python/xoscar/backends/mars/: backend.py  pool.py
python/xoscar/backends/mars/tests/: test-logging.conf  test_debug.py  test_mars_actor_context.py  test_pool.py
python/xoscar/backends/ray/: backend.py  communication.py  driver.py  pool.py  utils.py
python/xoscar/backends/ray/tests/: test_communication.py  test_ray_actor_context.py  test_ray_actor_driver.py  test_ray_pool.py  test_utils.py
python/xoscar/backends/test/: backend.py  pool.py
python/xoscar/backends/test/tests/: test_actor_context.py  test_transfer.py
python/xoscar/backends/tests/: test_messages.py
python/xoscar/collective/: __init__.py  common.py  core.py  nccl_backend.py  process_group.py  utils.py  xoscar_cupy.py  xoscar_pygloo.pyi
python/xoscar/collective/backend/: nccl_backend.py
python/xoscar/collective/gloo/: xoscar_pygloo.pyi
python/xoscar/collective/gloo/test/: test_pygloo.py
python/xoscar/collective/gloo/tests/: test_pygloo.py
python/xoscar/collective/rendezvous/: xoscar_store.pyi
python/xoscar/collective/rendezvous/test/: test_tcp_store.py
python/xoscar/collective/test/: test_pygloo_tcp_store.py
python/xoscar/collective/tests/: test_core.py  test_cupy.py  test_nccl.py  test_pygloo.py  test_pygloo_tcp_store.py
python/xoscar/metrics/: api.py
python/xoscar/metrics/backends/: metric.py
python/xoscar/metrics/backends/console/: console_metric.py
python/xoscar/metrics/backends/console/tests/: test_console_metric.py
python/xoscar/metrics/backends/prometheus/tests/: test_prometheus_metric.py
python/xoscar/metrics/backends/tests/: test_metric.py
python/xoscar/metrics/tests/: test_metric_api.py
python/xoscar/serialization/: __init__.py  aio.py  arrow.py  core.pyi  core.pyx  exception.py  mlx.py  numpy.py  pyfury.py  torch.py
python/xoscar/serialization/tests/: test_serial.py
python/xoscar/tests/: core.py  test_actorcaller.py  test_batch.py  test_cmdline.py  test_generator.py  test_profiling.py  test_utils.py
python/xoscar/virtualenv/: __init__.py  core.py  platform.py  utils.py  uv.py
python/xoscar/virtualenv/tests/: test_core.py  test_utils.py  test_uv.py
