[build-system]
requires = [
    "setuptools<64",
    "wheel",
    "oldest-supported-numpy",
    "pandas>=1.0.4",
    "scipy==1.4.1; python_version<'3.9' and platform_machine!='aarch64'",
    "scipy==1.5.3; python_version<'3.9' and platform_machine=='aarch64'",
    "scipy==1.5.4; python_version>='3.9' and python_version<'3.10' and sys_platform=='win32'",
    "scipy>=1.4.1; python_version>='3.9' and python_version<'3.10' and sys_platform!='win32'",
    "scipy>=1.4.1; python_version>='3.10'",
    "cython>=0.29.33",
    "requests>=2.4.0",
    "cloudpickle>=2.2.1; python_version>='3.11'",
    "cloudpickle==1.5.0; python_version<'3.11'",
]
build-backend = "setuptools.build_meta"

[tool.black]
include = '\.pyi?$'
extend-exclude = '''
^/xoscar/(_version.py)
'''

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "cuda: mark a test as a cuda case.",
]

[tool.cibuildwheel]
build = ["cp38-*", "cp39-*", "cp310-*", "cp311-*"]
skip = "pp* *musllinux* *i686 cp36* cp38-win32 cp39-win32 cp310-win32 cp311-win32"
manylinux-x86_64-image = "manylinux2014"
