[metadata]
name = xoscar
description = Python actor framework for heterogeneous computing.
author = Qin Xuye
author_email = qinxuye@xprobe.io
maintainer = Qin Xuye
maintainer_email = qinxuye@xprobe.io
license = Apache License 2.0
url = http://github.com/xorbitsai/xoscar
python_requires = >=3.8
classifier =
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    numpy>=1.14.0
    pandas>=1.0.0
    scipy>=1.0.0; sys_platform!="win32" or python_version>="3.10"
    scipy>=1.0.0,<=1.9.1; sys_platform=="win32" and python_version<"3.10"
    cloudpickle>=1.5.0
    psutil>=5.9.0
    tblib>=1.7.0
    pickle5; python_version<"3.8"
    uvloop>=0.14.0; sys_platform!="win32"

[options.packages.find]
exclude =
    *.conftest*
    *.tests.*
    *.tests

[options.extras_require]
dev =
    cython>=0.29
    pytest>=3.5.0
    pytest-cov>=2.5.0
    pytest-timeout>=1.2.0
    pytest-forked>=1.0
    pytest-asyncio>=0.14.0
    ipython>=6.5.0
    sphinx>=3.0.0,<5.0.0
    pydata-sphinx-theme>=0.3.0
    sphinx-intl>=0.9.9
    mock>=4.0.0; python_version<"3.8"
    flake8>=3.8.0
    black
doc =
    ipython>=6.5.0
    sphinx>=3.0.0,<5.0.0
    pydata-sphinx-theme>=0.3.0
    sphinx-intl>=0.9.9
extra =
    pyarrow>=5.0.0
kubernetes =
    kubernetes>=10.0.0
ray =
    xoscar_ray>=0.0.1

[coverage:run]
branch = True
relative_files = True
cover_pylib = False
plugins = Cython.Coverage
include =
    xoscar/*
omit =
    xoscar/_version.py
    xoscar/aio/lru.py
    xoscar/entrypoints.py
    xoscar/nvutils.py
    *.pxd
    */tests/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
    return NotImplemented

[versioneer]
VCS = git
style = pep440
versionfile_source = xoscar/_version.py
versionfile_build = xoscar/_version.py
tag_prefix = v
parentdir_prefix = xoscar-

[flake8]
max-line-length = 100
select =
    E9,
    E101,
    E111,
    E117,
    E127,
    E201,
    E202,
    E223,
    E224,
    E225,
    E231,
    E242,
    E251,
    E273,
    E274,
    E275,
    E301,
    E302,
    E303,
    E304,
    E305,
    E401,
    E703,
    E901,
    E999,
    F7,
    F63,
    F82,
    F401,
    F811,
    F821,
    F822,
    F823,
    F841,
    W191,
    W291,
    W292,
    W293,
    W391,
    W601,
    W602,
    W603,
    W604,
    W605
exclude =
    __init__.py
    __pycache__
    .git/
    .github/
    build/
    ci/
    dist/
    docs/

[codespell]
ignore-words-list = hist,rcall,fpr,ser,nd,inout,ot,Ba,ba,asend,hart,coo,splitted,datas,fro
skip = .idea,.git,./build,./docs/build,node_modules,static,generated,*.po,*.ts,*.json,*.c,*.cpp,*.cfg

[isort]
profile = black

[mypy]
ignore_missing_imports=True
follow_imports=skip
